--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,204 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:orientation="vertical"
+    android:padding="16dp">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:id="@+id/resultDisplay"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textSize="50dp"
+        android:gravity="end"
+        android:padding="16dp"
+        android:text="0" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <GridLayout
+        android:layout_width="match_parent"
+        android:layout_height="649dp"
+        android:columnCount="4"
+        android:padding="20dp"
+        android:rowCount="5">
+
+        <!-- Row 1 -->
+
+        <Button
+            android:id="@+id/button_clear"
+            android:layout_width="78dp"
+            android:layout_height="84dp"
+            android:layout_row="0"
+            android:layout_column="0"
+            android:backgroundTint="#008000"
+            android:fontFamily="serif"
+            android:text="C"
+            android:textColor="#FFFFFF" />
+
+        <Button
+            android:id="@+id/button_plus_minus"
+            android:layout_width="78dp"
+            android:layout_height="84dp"
+            android:backgroundTint="#0000FF"
+            android:fontFamily="serif"
+            android:text="+/-"
+            android:textColor="#FFFFFF" />
+
+        <Button
+            android:id="@+id/button_percent"
+            android:layout_width="78dp"
+            android:layout_height="84dp"
+            android:backgroundTint="#0000FF"
+            android:fontFamily="serif"
+            android:text="%"
+            android:textColor="#FFFFFF" />
+
+        <Button
+            android:id="@+id/button_divide"
+            android:layout_width="78dp"
+            android:layout_height="84dp"
+            android:backgroundTint="#0000FF"
+            android:fontFamily="serif"
+            android:text="÷"
+            android:textColor="#FFFFFF" />
+
+        <!-- Row 2 -->
+        <Button
+            android:id="@+id/button7"
+            android:layout_width="78dp"
+            android:layout_height="84dp"
+            android:backgroundTint="#FF5722"
+            android:fontFamily="serif"
+            android:text="7"
+            android:textColor="#FFFFFF" />
+
+        <Button
+            android:id="@+id/button8"
+            android:layout_width="78dp"
+            android:layout_height="84dp"
+            android:backgroundTint="#FF5722"
+            android:fontFamily="serif"
+            android:text="8"
+            android:textColor="#FFFFFF" />
+
+        <Button
+            android:id="@+id/button9"
+            android:layout_width="78dp"
+            android:layout_height="84dp"
+            android:backgroundTint="#FF5722"
+            android:fontFamily="serif"
+            android:text="9"
+            android:textColor="#FFFFFF" />
+
+        <Button
+            android:id="@+id/button_multiply"
+            android:layout_width="78dp"
+            android:layout_height="84dp"
+            android:backgroundTint="#0000FF"
+            android:fontFamily="serif"
+            android:text="×"
+            android:textColor="#FFFFFF" />
+
+        <!-- Row 3 -->
+        <Button
+            android:id="@+id/button4"
+            android:layout_width="78dp"
+            android:layout_height="84dp"
+            android:backgroundTint="#FF5722"
+            android:fontFamily="serif"
+            android:text="4"
+            android:textColor="#FFFFFF" />
+
+        <Button
+            android:id="@+id/button5"
+            android:layout_width="78dp"
+            android:layout_height="84dp"
+            android:backgroundTint="#FF5722"
+            android:fontFamily="serif"
+            android:text="5"
+            android:textColor="#FFFFFF" />
+
+        <Button
+            android:id="@+id/button6"
+            android:layout_width="78dp"
+            android:layout_height="84dp"
+            android:backgroundTint="#FF5722"
+            android:fontFamily="serif"
+            android:text="6"
+            android:textColor="#FFFFFF" />
+
+        <Button
+            android:id="@+id/button_minus"
+            android:layout_width="78dp"
+            android:layout_height="84dp"
+            android:backgroundTint="#0000FF"
+            android:fontFamily="serif"
+            android:text="-"
+            android:textColor="#FFFFFF" />
+
+        <!-- Row 4 -->
+        <Button
+            android:id="@+id/button1"
+            android:layout_width="78dp"
+            android:layout_height="84dp"
+            android:backgroundTint="#FF5722"
+            android:fontFamily="serif"
+            android:text="1"
+            android:textColor="#FFFFFF" />
+
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="78dp"
+            android:layout_height="84dp"
+            android:backgroundTint="#FF5722"
+            android:fontFamily="serif"
+            android:text="2"
+            android:textColor="#FFFFFF" />
+
+        <Button
+            android:id="@+id/button3"
+            android:layout_width="78dp"
+            android:layout_height="84dp"
+            android:backgroundTint="#FF5722"
+            android:fontFamily="serif"
+            android:text="3"
+            android:textColor="#FFFFFF" />
+
+        <Button
+            android:id="@+id/button_plus"
+            android:layout_width="78dp"
+            android:layout_height="84dp"
+            android:backgroundTint="#0000FF"
+            android:fontFamily="serif"
+            android:text="+"
+            android:textColor="#FFFFFF" />
+
+        <!-- Row 5 -->
+        <Button
+            android:id="@+id/button0"
+            android:layout_width="78dp"
+            android:layout_height="84dp"
+            android:backgroundTint="#FF5722"
+            android:fontFamily="serif"
+            android:text="0"
+            android:textColor="#FFFFFF" />
+
+        <Button
+            android:id="@+id/button_decimal"
+            android:layout_width="78dp"
+            android:layout_height="84dp"
+            android:backgroundTint="#FF5722"
+            android:fontFamily="serif"
+            android:text="."
+            android:textColor="#FFFFFF" />
+
+        <Button
+            android:id="@+id/button_equals"
+            android:layout_width="78dp"
+            android:layout_height="84dp"
+            android:backgroundTint="#FF0000"
+            android:fontFamily="serif"
+            android:text="="
+            android:textColor="#FFFFFF" />
+
+    </GridLayout>
+</LinearLayout>
